Update Carrefour contact information in 2.html

--- a/2.html
+++ b/2.html
@@ -307,7 +307,7 @@ function closeStores() {
             </li>
             <li class="flex items-start gap-3">
                 <span class="text-blue-700 font-bold">•</span> 
-                <span><strong>Carrefour</strong> - 01/296300</span>
+                <span><strong>Carrefour</strong> - Hazmieh Tel:01/296300</span>
             </li>
         </ul>
 
