--- a/2.html
+++ b/2.html
@@ -84,7 +84,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
-            <div class="bg-blue-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Fish Mix', 'Specially formulated for seafood crispiness.', 'f.jpg', 'fv.mp4')">
+            <div class="bg-white rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Fish Mix', 'Specially formulated for seafood crispiness.', 'f.jpg', 'fv.mp4')">
 <button onclick="event.stopPropagation(); play('fv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16">
         <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
