Change item container background color to white
Updated background color of item containers from blue to white for better visibility.

--- a/2.html
+++ b/2.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
-            <div class="bg-blue-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Chicken Mix', 'The ultimate blend for golden, crunchy chicken.', 'c.jpg', 'cv.mp4')">
+            <div class="bg-white rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Chicken Mix', 'The ultimate blend for golden, crunchy chicken.', 'c.jpg', 'cv.mp4')">
 <button onclick="event.stopPropagation(); play('cv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16">
         <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
-            <div class="bg-blue-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Crispy Chicken', 'A fiery kick for your favorite fried dishes.', 's.jpg', 'sv.mp4')">
+            <div class="bg-white rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" onclick="openInfo('Crispy Chicken', 'A fiery kick for your favorite fried dishes.', 's.jpg', 'sv.mp4')">
 <button onclick="event.stopPropagation(); play('sv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16">
         <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
@@ -131,7 +131,7 @@
 
 
 <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
-    <div class="bg-blue-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
+    <div class="bg-white rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
          onclick="openInfo('Fish and Chicken Cleaner', 'The recipe for cleaner cooking and a unique flavor|A natural spice mix for cleaning chicken and fish|Removes bad smells completely|ZERO preservatives, 100% natural products|Effective against E. coli and Salmonella bacteria|Natural, high-quality, and easy to use without affecting the taste', 'clean.jpg')">
         
         <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
