Change modal image background color to white

--- a/2.html
+++ b/2.html
@@ -208,7 +208,7 @@
                     </svg>
                 </button>
             </div>
-            <img id="modalImg" src="" class="w-full h-64 object-contain bg-blue-50 rounded-2xl mb-6">
+            <img id="modalImg" src="" class="w-full h-64 object-contain bg-white rounded-2xl mb-6">
             <p id="modalDesc" class="text-slate-600 leading-relaxed mb-8"></p>
             <button onclick="closeInfo()" class="w-full bg-blue-700 text-white py-4 rounded-xl font-bold hover:bg-blue-800 transition">Close Details</button>
         </div>
