--- a/2.html
+++ b/2.html
@@ -296,20 +296,22 @@ function closeStores() {
             </button>
         </div>
         
-        <ul class="space-y-4 text-slate-700 overflow-y-auto max-h-[50vh] pr-2">
-            <li class="flex items-start gap-3">
-                <span class="text-blue-700 font-bold">•</span> 
-                <span><strong>Al Amlieh</strong></span>
-            </li>
-            <li class="flex items-start gap-3">
-                <span class="text-blue-700 font-bold">•</span> 
-                <span><strong>Al Wataniya</strong> - 01 558 184</span>
-            </li>
-            <li class="flex items-start gap-3">
-                <span class="text-blue-700 font-bold">•</span> 
-                <span><strong>Carrefour</strong> - Hazmieh Tel:01/296300</span>
-            </li>
+<details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Al Amleya</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Haret Hreik Branch - 01 558 184</li>
+            <li>Beirut Central Branch</li>
+            <li>Southern Suburb Location</li>
         </ul>
+    </div>
+</details>
 <details class="group border border-slate-100 rounded-xl overflow-hidden">
     <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
         <span>Al Wataniya</span>
