--- a/2.html
+++ b/2.html
@@ -298,7 +298,7 @@ function closeStores() {
         
 <details class="group border border-slate-100 rounded-xl overflow-hidden">
     <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
-        <span>Al Amleya</span>
+        <span>COOP/Al Makhazen/Freshway Tel: 1265</span>
         <span class="transition group-open:rotate-180">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
         </span>
@@ -306,9 +306,17 @@ function closeStores() {
     <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
         <p class="font-bold mb-2">Branches:</p>
         <ul class="list-disc ml-5 space-y-1">
-            <li>Haret Hreik Branch - 01 558 184</li>
-            <li>Beirut Central Branch</li>
-            <li>Southern Suburb Location</li>
+            <li>Khalde</li>
+            <li>Aramoun</li>
+            <li>Bshamoun</li>
+            <li>Sabra</li>
+            <li>Salim Salam</li>
+            <li>Zekak Al Blat</li>
+            <li>Zarif</li>
+            <li>Mar Elias</li>
+            <li>Verdun</li>
+            <li>Al Hamra</li>
+            <li>Ras Beirut</li>
         </ul>
     </div>
 </details>
