Add new locations to the list in 2.html

--- a/2.html
+++ b/2.html
@@ -317,6 +317,16 @@ function closeStores() {
             <li>Verdun</li>
             <li>Al Hamra</li>
             <li>Ras Beirut</li>
+            <li>Ramle El Bayda</li>
+            <li>Broumana</li>
+            <li>Awkar</li>
+            <li>Debbieh</li>
+            <li>Ketermaya</li>
+            <li>Chehime</li>
+            <li>Aley-Piscine</li>
+            <li>Aley-Malaab</li>
+            <li>Bhamdoun</li>
+            <li>Hammana</li>
         </ul>
     </div>
 </details>
