Change store name and remove branch details
Updated store details to reflect new information.

--- a/2.html
+++ b/2.html
@@ -332,19 +332,11 @@ function closeStores() {
 </details>
 <details class="group border border-slate-100 rounded-xl overflow-hidden">
     <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
-        <span>Al Wataniya</span>
+        <span>Souk El Jemle Aramoun Tel: 05 807 321</span>
         <span class="transition group-open:rotate-180">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
         </span>
     </summary>
-    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
-        <p class="font-bold mb-2">Branches:</p>
-        <ul class="list-disc ml-5 space-y-1">
-            <li>Haret Hreik Branch - 01 558 184</li>
-            <li>Beirut Central Branch</li>
-            <li>Southern Suburb Location</li>
-        </ul>
-    </div>
 </details>
 
         <button onclick="closeStores()" class="w-full mt-8 bg-blue-700 text-white py-4 rounded-xl font-bold hover:bg-blue-800 transition">
