--- a/2.html
+++ b/2.html
@@ -332,7 +332,7 @@ function closeStores() {
 </details>
 <details class="group border border-slate-100 rounded-xl overflow-hidden">
     <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
-        <span>Souk El Jemle Aramoun Tel: 05 807 321</span>
+        <span>Souk El Jemle Aramoun 📞 05 807 321</span>
         <span class="transition group-open:rotate-180">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
         </span>
