Add supermarket details with contact info
Added details sections for various supermarkets with contact information and branches.

--- a/2.html
+++ b/2.html
@@ -298,7 +298,7 @@ function closeStores() {
         
 <details class="group border border-slate-100 rounded-xl overflow-hidden">
     <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
-        <span>COOP/Al Makhazen/Freshway 📞: 1265</span>
+        <span>COOP/Al Makhazen/Freshway 📞 1265</span>
         <span class="transition group-open:rotate-180">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
         </span>
@@ -338,6 +338,129 @@ function closeStores() {
         </span>
     </summary>
 </details>
+        <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Baydoun Supermarket 📞 78 805 248</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Aramoun</li>
+            <li>Haret Hreik</li>
+        </ul>
+    </div>
+</details>
+        <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Carrefour 📞 01 296 300</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Bshamoun</li>
+            <li>City Center - Hazmieh</li>
+            <li>Mousaitbeh</li>
+            <li>City Mall - Dora</li>
+            <li>Kousba</li>
+            <li>Aley</li>
+        </ul>
+    </div>
+</details>
+        <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Al Wataniya Supermarket 📞 01 558 184</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Chouaifat</li>
+            <li>Haret Hreik</li>
+        </ul>
+    </div>
+</details>
+        <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Amleya Hypermarket 📞 01 454 021/2</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Tarik El Matar</li>
+            <li>Chiyah - Mouawad</li>
+            <li>Al Ghazieh</li>
+            <li>Sour</li>
+        </ul>
+    </div>
+</details>
+        <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Al Zein - Borj El Barajneh 📞 70 040 891</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+</details>
+                <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Rammal 📞 03 955 205</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+    <div class="p-4 text-sm text-slate-600 bg-white border-t border-slate-100">
+        <p class="font-bold mb-2">Branches:</p>
+        <ul class="list-disc ml-5 space-y-1">
+            <li>Borj El Barajneh (Tahwita)</li>
+            <li>Ghoubeiry</li>
+        </ul>
+    </div>
+</details>
+         <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Karout Mall - Galerie Semaan 📞 01 542 077</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+</details>
+         <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Deeb MiniMarket - Sour</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+</details>
+         <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>Supermarket Daou - Ras Al Harf 📞 05 262 625</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+</details>
+         <details class="group border border-slate-100 rounded-xl overflow-hidden">
+    <summary class="flex justify-between items-center p-4 cursor-pointer bg-slate-50 list-none font-bold text-slate-700">
+        <span>MS Market - Charoun 📞 76 182 841</span>
+        <span class="transition group-open:rotate-180">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
+        </span>
+    </summary>
+</details>
+
+    
 
         <button onclick="closeStores()" class="w-full mt-8 bg-blue-700 text-white py-4 rounded-xl font-bold hover:bg-blue-800 transition">
             Close
