--- a/3.html
+++ b/3.html
@@ -144,7 +144,7 @@
 
     <div>
         <h2 class="text-3xl font-black text-slate-900 mb-8 flex items-center gap-4">
-            Commercial Solutions
+            Commercial Products
             <span class="h-1 flex-grow bg-slate-100 rounded-full"></span>
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
