--- a/4.html
+++ b/4.html
@@ -100,12 +100,12 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
             <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
                 <div class="bg-white border border-slate-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
-                     onclick="openInfo('Chicken & Fish Cleaner 85G', 'Cleans up to 1-2 chickens or 1-2 kg of fish|24 bags per carton|100% removes bad smell, rancidity, E. coli, and salmonella|USAGE INSTRUCTIONS|85 ml of Magic Mix + 1 liter of water|Soak in a bowl for 10 minutes|For fish: Use 85 ml per 1 kg of fish', 'clean85.jpg', 'cleanv.mp4')">
+                     onclick="openInfo('Chicken & Fish Cleaner 85G', 'Cleans up to 1-2 chickens or 1-2 kg of fish|24 bags per carton|100% removes bad smell, rancidity, E. coli, and salmonella|USAGE INSTRUCTIONS|85 ml of Magic Mix + 1 liter of water|Soak in a bowl for 10 minutes|For fish: Use 85 ml per 1 kg of fish', 'clean85.png', 'cleanv.mp4')">
                     <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>
                         How to Use
                     </button>                 
-                    <img src="clean85.jpg" alt="Cleaner 85G" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
+                    <img src="clean85.png" alt="Cleaner 85G" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
                 </div>
                 <button onclick="openInfo('Chicken & Fish Cleaner 85G', 'Cleans up to 1-2 chickens or 1-2 kg of fish|24 bags per carton|100% removes bad smell, rancidity, E. coli, and salmonella|USAGE INSTRUCTIONS|85 ml of Magic Mix + 1 liter of water|Soak in a bowl for 10 minutes|For fish: Use 85 ml per 1 kg of fish', 'clean85.jpg', 'cleanv.mp4')" class="text-left group">
                     <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Chicken & Fish Cleaner 85G</h3>
