--- a/4.html
+++ b/4.html
@@ -107,7 +107,7 @@
                     </button>                 
                     <img src="clean85.png" alt="Cleaner 85G" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
                 </div>
-                <button onclick="openInfo('Chicken & Fish Cleaner 85G', 'Cleans up to 1-2 chickens or 1-2 kg of fish|24 bags per carton|100% removes bad smell, rancidity, E. coli, and salmonella|USAGE INSTRUCTIONS|85 ml of Magic Mix + 1 liter of water|Soak in a bowl for 10 minutes|For fish: Use 85 ml per 1 kg of fish', 'clean85.jpg', 'cleanv.mp4')" class="text-left group">
+                <button onclick="openInfo('Chicken & Fish Cleaner 85G', 'Cleans up to 1-2 chickens or 1-2 kg of fish|24 bags per carton|100% removes bad smell, rancidity, E. coli, and salmonella|USAGE INSTRUCTIONS|85 ml of Magic Mix + 1 liter of water|Soak in a bowl for 10 minutes|For fish: Use 85 ml per 1 kg of fish', 'clean85.png', 'cleanv.mp4')" class="text-left group">
                     <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Chicken & Fish Cleaner 85G</h3>
                     
                 </button>
@@ -198,56 +198,56 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
             <div class="bg-white border border-slate-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
-                 onclick="openInfo('Chicken & Fish Cleaner Gallon 5KG', 'The recipe for cleaner cooking and a unique flavor|A natural spice mix for cleaning chicken and fish|Removes bad smells completely|ZERO preservatives, 100% natural products|Effective against E. coli and Salmonella bacteria|Natural, high-quality, and easy to use without affecting the taste', 'cleaner5000.jpg', 'cleanv.mp4')">
+                 onclick="openInfo('Chicken & Fish Cleaner Gallon 5KG', 'The recipe for cleaner cooking and a unique flavor|A natural spice mix for cleaning chicken and fish|Removes bad smells completely|ZERO preservatives, 100% natural products|Effective against E. coli and Salmonella bacteria|Natural, high-quality, and easy to use without affecting the taste', 'cleaner5000.png', 'cleanv.mp4')">
                 <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>
                     How to Use
                 </button>                 
-                <img src="cleaner5000.jpg" alt="Cleaner Gallon" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
+                <img src="cleaner5000.png" alt="Cleaner Gallon" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
             </div>
-            <button onclick="openInfo('Chicken & Fish Cleaner Gallon 5KG', 'The recipe for cleaner cooking and a unique flavor|A natural spice mix for cleaning chicken and fish|Removes bad smells completely|ZERO preservatives, 100% natural products|Effective against E. coli and Salmonella bacteria|Natural, high-quality, and easy to use without affecting the taste', 'cleaner5000.jpg', 'cleanv.mp4')" class="text-left group">
+            <button onclick="openInfo('Chicken & Fish Cleaner Gallon 5KG', 'The recipe for cleaner cooking and a unique flavor|A natural spice mix for cleaning chicken and fish|Removes bad smells completely|ZERO preservatives, 100% natural products|Effective against E. coli and Salmonella bacteria|Natural, high-quality, and easy to use without affecting the taste', 'cleaner5000.png', 'cleanv.mp4')" class="text-left group">
                 <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Chicken & Fish Cleaner Gallon 5KG</h3>
             </button>
         </div>
 
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
             <div class="bg-white border border-slate-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
-                 onclick="openInfo('Chicken Broasted Spices 750G', 'The ultimate blend for golden, crunchy broasted chicken.', 'broasted750.jpg', 'cleanv.mp4')">
+                 onclick="openInfo('Chicken Broasted Spices 750G', 'The ultimate blend for golden, crunchy broasted chicken.', 'broasted750.png', 'cleanv.mp4')">
                 <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>
                     How to Use
                 </button>                 
-                <img src="broasted750.jpg" alt="Broasted Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
+                <img src="broasted750.png" alt="Broasted Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
             </div>
-            <button onclick="openInfo('Chicken Broasted Spices 750G', 'The ultimate blend for golden, crunchy broasted chicken.', 'broasted750.jpg', 'cleanv.mp4')" class="text-left group">
+            <button onclick="openInfo('Chicken Broasted Spices 750G', 'The ultimate blend for golden, crunchy broasted chicken.', 'broasted750.png', 'cleanv.mp4')" class="text-left group">
                 <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Chicken Broasted Spices 750G</h3>
             </button>
         </div>
 
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
             <div class="bg-white border border-slate-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
-                 onclick="openInfo('Chicken Crispy Spices 500G', 'A fiery kick for your favorite fried dishes.', 'crispy500.jpg', 'cleanv.mp4')">
+                 onclick="openInfo('Chicken Crispy Spices 500G', 'A fiery kick for your favorite fried dishes.', 'crispy500.png', 'cleanv.mp4')">
                 <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>
                     How to Use
                 </button>                 
-                <img src="crispy500.jpg" alt="Crispy Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
+                <img src="crispy500.png" alt="Crispy Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
             </div>
-            <button onclick="openInfo('Chicken Crispy Spices 500G', 'A fiery kick for your favorite fried dishes.', 'crispy500.jpg', 'cleanv.mp4')" class="text-left group">
+            <button onclick="openInfo('Chicken Crispy Spices 500G', 'A fiery kick for your favorite fried dishes.', 'crispy500.png', 'cleanv.mp4')" class="text-left group">
                 <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Chicken Crispy Spices 500G</h3>
             </button>
         </div>
 
         <div class="bg-white rounded-3xl p-4 shadow-lg border border-slate-100 flex flex-col">
             <div class="bg-white border border-slate-50 rounded-2xl overflow-hidden mb-6 flex items-center justify-center p-8 relative cursor-pointer group" 
-                 onclick="openInfo('Fish Broasted Spices 700G', 'Specially formulated for seafood crispiness.', 'broasted700.jpg', 'cleanv.mp4')">
+                 onclick="openInfo('Fish Broasted Spices 700G', 'Specially formulated for seafood crispiness.', 'broasted700.png', 'cleanv.mp4')">
                 <button onclick="event.stopPropagation(); play('cleanv.mp4')" class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-2 rounded-full text-xs font-bold shadow-md hover:bg-blue-700 hover:text-white transition z-10 flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/></svg>
                     How to Use
                 </button>                 
-                <img src="broasted700.jpg" alt="Fish Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
+                <img src="broasted700.png" alt="Fish Spices" class="group-hover:scale-105 transition duration-500 max-h-64 object-contain">
             </div>
-            <button onclick="openInfo('Fish Broasted Spices 700G', 'Specially formulated for seafood crispiness.', 'broasted700.jpg', 'cleanv.mp4')" class="text-left group">
+            <button onclick="openInfo('Fish Broasted Spices 700G', 'Specially formulated for seafood crispiness.', 'broasted700.png', 'cleanv.mp4')" class="text-left group">
                 <h3 class="text-2xl font-bold group-hover:text-blue-700 transition">Fish Broasted Spices 700G</h3>
             </button>
         </div>
